# onoffmonitordevice

./: .gitignore  Pipfile  README.md  pyproject.toml
RPi/: GPIO.py
onoffmonitordevice/: __main__.py  device.py  monitor.py
