[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onoffmonitordevice"
version = "0.0.1"
authors = [
  { name="Joe Greaves" },
]
description = "Monitor the on/off status of devices and report to the server"
readme = "README.md"
requires-python = ">=3.9,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Raspbian",
]
dependencies = [
    "requests>=2.31.0",
    "keyring>=24.2.0",
    "RPi.GPIO>=0.7.1",
    "keyrings.alt>=4.2.0",
]

[project.scripts]
onoffmonitor = "onoffmonitordevice.__main__:main"

[project.urls]
"Homepage" = "https://github.com/Grvs44/onoffmonitordevice"
